# PROJETO-INTEGRADOR-3

./: .gitignore  README.md  auth.py  criar_usuario.py  database.py  domain.py  frontend.py  imobiliaria.db  main.py  models.py  popular_banco.py  pyproject.toml  recriar_banco.py  requirements.txt  schemas.py  test_api.py  test_ui.py
routers/: auth_router.py  cliente_router.py  corretor_router.py  imovel_router.py  lead_router.py  pagamento_router.py  transacao_router.py  visita_router.py
static/: theme.css
utils/: cep_api.py  validacao.py
