[project]
name = "erp-imobiliaria"
version = "0.1.0"
description = "Sistema de gestão imobiliária"
authors = [
    {name = "Dev"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "nicegui (>=3.12.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
